--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -121,11 +121,31 @@ const socialImageURL = new URL(ogImage ? ogImage : '/images/social-card.png', As
     bottom: 0;
     right: 0;
     height: auto;
-    width: 250px;
+    width: 400px;
     z-index: 9999;
     pointer-events: none;
     user-select: none;
     margin-bottom: -4px;
+  "
+/>
+
+<!-- 左下角装饰图像 -->
+<img
+  src="/images/manosaba.png"
+  alt="Decoration"
+  style="
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    height: auto;
+    width: 500px;
+    z-index: 9999;
+    pointer-events: none;
+    user-select: none;
+    margin-bottom: -4px;
+    margin-left: 0;
+    opacity: 0.8;
+    transform: translate(50px, 60px);
   "
 />
 
